--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/secondary"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
     android:gravity="center_horizontal"
@@ -14,7 +13,7 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/primary"
+        android:elevation="0dp"
         >
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
@@ -28,27 +27,17 @@
                 android:orientation="horizontal"
                 android:layout_gravity="top"
                 >
-                <ImageView
-                    android:id="@+id/imageView2"
-                    android:layout_width="50dp"
-                    android:layout_height="match_parent"
-                    app:srcCompat="@drawable/ic_musicplayerlogo"
-                    android:contentDescription="@string/app_name"
-                    android:padding="10dp"
-                    android:gravity="center"
-                    android:layout_weight="0"
-                    />
 
                 <TextView
                     android:id="@+id/textMusicPlayer"
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
                     android:text="@string/app_name"
-                    android:textColor="@color/textPrimary"
                     android:textSize="25sp"
                     android:visibility="visible"
                     android:layout_weight="1"
                     android:gravity="center_vertical"
+                    android:paddingStart="15dp"
                     />
 
                 <ImageButton
@@ -56,7 +45,6 @@
                     android:layout_width="45dp"
                     android:layout_height="match_parent"
                     android:src="@drawable/ic_search_black_24dp"
-                    android:background="@color/transparent"
                     android:layout_gravity="center"
                     android:layout_weight="0"
                     />
@@ -66,7 +54,6 @@
                     android:layout_width="45dp"
                     android:layout_height="match_parent"
                     android:src="@drawable/ic_settings_black_24dp"
-                    android:background="@color/transparent"
                     android:layout_gravity="center"
                     android:layout_weight="0"
                     />
@@ -77,9 +64,8 @@
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabTextColor="@color/textSecondary"
-            app:tabSelectedTextColor="@color/textPrimary"
-            app:tabMode="scrollable"
+            app:tabGravity="fill"
+            android:elevation="0dp"
             />
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -98,45 +84,22 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/colorPrimary"
+            android:gravity="center_horizontal"
             >
-            <ImageView
-                android:layout_width="100dp"
-                android:layout_height="match_parent"
-                android:src="@drawable/ic_musicplayerlogo"
-                android:padding="10dp"
-                />
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                >
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    />
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    />
-            </LinearLayout>
             <ImageButton
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
-                android:background="@color/transparent"
                 android:src="@drawable/ic_skip_previous_black_24dp"
                 />
             <ImageButton
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
-                android:background="@color/transparent"
-                android:src="@drawable/ic_play_arrow_black_24dp"
+                android:src="@drawable/ic_play_circle_filled_black_24dp"
+                android:id="@+id/main_bottom_appbar_play_btn"
                 />
             <ImageButton
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
-                android:background="@color/transparent"
                 android:src="@drawable/ic_skip_next_black_24dp"
                 />
         </LinearLayout>
