--- a/app/src/main/res/layout/widget_song_item.xml
+++ b/app/src/main/res/layout/widget_song_item.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/songListItem"
+    android:id="@+id/widget_song_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
     <ImageButton
         android:id="@+id/songPlayButton"
+        android:layout_gravity="center"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@drawable/ic_play_arrow_black_24dp"
-        android:background="@color/transparent"
+        android:src="@drawable/ic_play_circle_filled_black_24dp"
         android:layout_weight="0" />
 
     <LinearLayout
@@ -25,17 +25,20 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:id="@+id/widget_song_item_path"/>
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="10dp"
+            android:textSize="14sp"
+            android:id="@+id/widget_song_item_artist"/>
+<!--        <TextView-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="0dp"-->
+<!--            android:id="@+id/widget_song_item_path"/>-->
     </LinearLayout>
 
     <ImageButton
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_gravity="center"
         android:src="@drawable/ic_more_vert_black_24dp"
-        android:layout_weight="0"
-        android:background="@color/transparent" />
+        android:layout_weight="0" />
 </LinearLayout>
