--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,16 +2,13 @@
 <resources>
     <color name="transparent">#00000000</color>
 
-    <color name="primary">#000000</color>
-    <color name="secondary">#171717</color>
-
-    <color name="accent">#22E3BC</color>
+    <color name="colorBlack">#000000</color>
 
     <color name="textPrimary">#FFFFFF</color>
-    <color name="textSecondary">#DDDDDD</color>
+    <color name="textSecondary">#CCCCCC</color>
 
 <!--    default-->
-    <color name="colorPrimary">#000000</color>
-    <color name="colorPrimaryDark">#202020</color>
-    <color name="colorAccent">#22E3BC</color>
+    <color name="colorPrimary">#F0F571</color>
+    <color name="colorPrimaryDark">#2C2F33</color>
+    <color name="colorAccent">#F0F571</color>
 </resources>
