--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:fitsSystemWindows="true"
+    tools:context=".ui.MainActivity"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center_horizontal"
-    tools:context="com.muiz6.musicplayer.ui.MainActivity"
+    android:id="@+id/main_layout"
     >
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appbar"
+        android:id="@+id/main_appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="0dp"
@@ -74,8 +76,19 @@
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:paddingBottom="@dimen/bottom_appbar_height"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        />
+
+    <include
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:id="@+id/main_fab"
+        layout="@layout/fab"
+        app:layout_behavior=".ui.FabBehaviour"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginBottom="86dp"
         />
 
     <com.google.android.material.bottomappbar.BottomAppBar
@@ -83,6 +96,7 @@
         android:layout_height="@dimen/bottom_appbar_height"
         android:layout_gravity="bottom"
         android:theme="@style/AppTheme.BottomAppBar"
+        android:id="@+id/main_bottom_appbar"
         >
         <LinearLayout
             android:layout_width="match_parent"
