--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,6 +49,7 @@
                     android:src="@drawable/ic_search_black_24dp"
                     android:layout_gravity="center"
                     android:layout_weight="0"
+                    android:tint="?attr/iconTint"
                     />
 
                 <ImageButton
@@ -58,18 +59,10 @@
                     android:src="@drawable/ic_settings_black_24dp"
                     android:layout_gravity="center"
                     android:layout_weight="0"
+                    android:tint="?attr/iconTint"
                     />
             </LinearLayout>
         </com.google.android.material.appbar.CollapsingToolbarLayout>
-
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tabs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:tabGravity="fill"
-            android:elevation="0dp"
-            app:tabIconTint="@color/textSecondary"
-            />
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.viewpager.widget.ViewPager
@@ -80,44 +73,78 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         />
 
-    <include
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:id="@+id/main_fab"
-        layout="@layout/fab"
-        app:layout_behavior=".ui.FabBehaviour"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginBottom="86dp"
-        />
-
     <com.google.android.material.bottomappbar.BottomAppBar
         android:layout_width="match_parent"
-        android:layout_height="@dimen/bottom_appbar_height"
+        android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:theme="@style/AppTheme.BottomAppBar"
         android:id="@+id/main_bottom_appbar"
+        app:contentInsetStart="0dp"
         >
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_horizontal"
-            >
-            <ImageButton
-                android:layout_width="50dp"
-                android:layout_height="match_parent"
-                android:src="@drawable/ic_skip_previous_black_24dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <!-- TODO: Progressbar may not be consistent across devices-->
+            <ProgressBar
+                android:id="@+id/main_bottom_appbar_progressbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                android:layout_marginBottom="-6dp"
+                android:layout_marginTop="-4dp"
                 />
-            <ImageButton
-                android:layout_width="50dp"
-                android:layout_height="match_parent"
-                android:src="@drawable/ic_play_circle_filled_black_24dp"
-                android:id="@+id/main_bottom_appbar_play_btn"
-                />
-            <ImageButton
-                android:layout_width="50dp"
-                android:layout_height="match_parent"
-                android:src="@drawable/ic_skip_next_black_24dp"
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:gravity="center_horizontal"
+                >
+                <TextView
+                    android:id="@+id/main_bottom_appbar_song_title"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_weight="1"
+
+                    android:ellipsize="marquee"
+                    android:singleLine="true"
+                    android:scrollHorizontally="true"
+                    android:marqueeRepeatLimit="marquee_forever"
+                    android:fadingEdge="horizontal"
+
+                    android:text="Song Title"
+                    android:textColor="?attr/iconTint"
+                    />
+                <ImageButton
+                    android:layout_width="50dp"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/ic_skip_previous_black_24dp"
+                    android:tint="?attr/iconTint"
+                    />
+                <ImageButton
+                    android:layout_width="50dp"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/ic_play_arrow_black_24dp"
+                    android:id="@+id/main_bottom_appbar_play_btn"
+                    android:tint="?attr/iconTint"
+                    />
+                <ImageButton
+                    android:layout_width="50dp"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/ic_skip_next_black_24dp"
+                    android:tint="?attr/iconTint"
+                    />
+            </LinearLayout>
+
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/main_tabs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:tabGravity="fill"
+                android:elevation="0dp"
+                app:tabIconTint="?attr/tabIconTint"
                 />
         </LinearLayout>
     </com.google.android.material.bottomappbar.BottomAppBar>
