--- a/app/src/main/res/layout/widget_song_item.xml
+++ b/app/src/main/res/layout/widget_song_item.xml
@@ -4,35 +4,39 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
-    <ImageButton
-        android:id="@+id/songPlayButton"
-        android:layout_gravity="center"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/ic_play_circle_filled_black_24dp"
-        android:layout_weight="0" />
-
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:id="@+id/widget_song_item_clickable"
         android:layout_weight="1">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:id="@+id/widget_song_item_title"/>
+        <ImageButton
+            android:id="@+id/songPlayButton"
+            android:layout_gravity="center"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/ic_play_circle_filled_black_24dp"
+            android:layout_weight="0"
+            />
 
-        <TextView
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:paddingHorizontal="10dp"
-            android:textSize="14sp"
-            android:id="@+id/widget_song_item_artist"/>
-<!--        <TextView-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_height="0dp"-->
-<!--            android:id="@+id/widget_song_item_path"/>-->
+            android:orientation="vertical"
+            android:layout_weight="1">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:id="@+id/widget_song_item_title"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingHorizontal="10dp"
+                android:textSize="14sp"
+                android:id="@+id/widget_song_item_artist"/>
+        </LinearLayout>
     </LinearLayout>
 
     <ImageButton
