--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,10 +9,10 @@
 
 <!--        color at the back of icon buttons-->
         <item name="backgroundTint">@color/transparent</item>
-        <item name="android:colorBackground">@color/colorPrimaryDark</item>
+        <item name="android:colorBackground">@color/colorPrimary</item>
 
-<!--        for app comact icons only will not work on custom icons-->
-        <item name="iconTint">@color/textPrimary</item>
+<!--        for app compact icons only will not work on custom icons-->
+        <item name="iconTint">?android:attr/textColor</item>
         <item name="tabIconTint">@color/textSecondary</item>
         <item name="bottomAppBarStyle">@style/AppTheme.BottomAppBar</item>
     </style>
@@ -27,8 +27,7 @@
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="AppTheme.BottomAppBar" parent="Widget.MaterialComponents.BottomAppBar.Colored">
-        <item name="backgroundTint">@color/colorDarkSecondary</item>
-        <item name="iconTint">@color/textPrimary</item>
+        <item name="backgroundTint">?attr/colorPrimaryDark</item>
     </style>
 
 </resources>
