--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,27 +9,22 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center_horizontal"
-    android:id="@+id/main_layout"
-    >
+    android:id="@+id/main_layout">
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/main_appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:elevation="0dp"
-        >
+        android:elevation="0dp">
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_scrollFlags="scroll|exitUntilCollapsed|snap|enterAlways"
-            app:titleEnabled="false"
-            >
+            app:titleEnabled="false">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:orientation="horizontal"
-                android:layout_gravity="top"
-                >
-
+                android:layout_gravity="top">
                 <TextView
                     android:id="@+id/textMusicPlayer"
                     android:layout_width="fill_parent"
@@ -39,8 +34,7 @@
                     android:visibility="visible"
                     android:layout_weight="1"
                     android:gravity="center_vertical"
-                    android:paddingStart="15dp"
-                    />
+                    android:paddingStart="15dp" />
 
                 <ImageButton
                     android:id="@+id/search_button"
@@ -49,8 +43,7 @@
                     android:src="@drawable/ic_search_black_24dp"
                     android:layout_gravity="center"
                     android:layout_weight="0"
-                    android:tint="?attr/iconTint"
-                    />
+                    android:tint="?attr/iconTint" />
 
                 <ImageButton
                     android:id="@+id/button"
@@ -59,10 +52,17 @@
                     android:src="@drawable/ic_settings_black_24dp"
                     android:layout_gravity="center"
                     android:layout_weight="0"
-                    android:tint="?attr/iconTint"
-                    />
+                    android:tint="?attr/iconTint" />
             </LinearLayout>
         </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/main_tabs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:tabGravity="fill"
+            android:elevation="0dp"
+            app:tabIconTint="?attr/tabIconTint" />
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.viewpager.widget.ViewPager
@@ -70,8 +70,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingBottom="@dimen/bottom_appbar_height"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
     <com.google.android.material.bottomappbar.BottomAppBar
         android:layout_width="match_parent"
@@ -79,8 +78,7 @@
         android:layout_gravity="bottom"
         android:theme="@style/AppTheme.BottomAppBar"
         android:id="@+id/main_bottom_appbar"
-        app:contentInsetStart="0dp"
-        >
+        app:contentInsetStart="0dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -93,20 +91,19 @@
                 android:layout_height="wrap_content"
                 style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                 android:layout_marginBottom="-6dp"
-                android:layout_marginTop="-4dp"
-                />
+                android:layout_marginTop="-4dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:gravity="center_horizontal"
-                >
+                android:gravity="center_horizontal">
                 <TextView
                     android:id="@+id/main_bottom_appbar_song_title"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:layout_weight="1"
+                    android:paddingStart="5dp"
 
                     android:ellipsize="marquee"
                     android:singleLine="true"
@@ -115,37 +112,27 @@
                     android:fadingEdge="horizontal"
 
                     android:text="Song Title"
-                    android:textColor="?attr/iconTint"
-                    />
+                    android:textColor="?attr/iconTint" />
+
                 <ImageButton
                     android:layout_width="50dp"
                     android:layout_height="match_parent"
                     android:src="@drawable/ic_skip_previous_black_24dp"
-                    android:tint="?attr/iconTint"
-                    />
+                    android:tint="?attr/iconTint" />
+
                 <ImageButton
                     android:layout_width="50dp"
                     android:layout_height="match_parent"
                     android:src="@drawable/ic_play_arrow_black_24dp"
-                    android:id="@+id/main_bottom_appbar_play_btn"
-                    android:tint="?attr/iconTint"
-                    />
+                    android:id="@+id/main_bottom_appbar_btn_play"
+                    android:tint="?attr/iconTint" />
+
                 <ImageButton
                     android:layout_width="50dp"
                     android:layout_height="match_parent"
                     android:src="@drawable/ic_skip_next_black_24dp"
-                    android:tint="?attr/iconTint"
-                    />
+                    android:tint="?attr/iconTint" />
             </LinearLayout>
-
-            <com.google.android.material.tabs.TabLayout
-                android:id="@+id/main_tabs"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:tabGravity="fill"
-                android:elevation="0dp"
-                app:tabIconTint="?attr/tabIconTint"
-                />
         </LinearLayout>
     </com.google.android.material.bottomappbar.BottomAppBar>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
