--- a/app/src/main/res/layout/row_song_item.xml
+++ b/app/src/main/res/layout/row_song_item.xml
@@ -1,48 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/widget_song_item"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/widget_song_item_clickable"
+        android:id="@+id/row_song_item_clickable"
         android:layout_weight="1">
         <ImageButton
             android:id="@+id/songPlayButton"
-            android:layout_gravity="center"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:src="@drawable/ic_play_circle_filled_black_24dp"
             android:layout_weight="0"
+            android:tint="?android:attr/textColorSecondary"
             />
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:paddingStart="@dimen/padding_container"
             android:layout_weight="1">
 
             <TextView
+                android:id="@+id/row_song_item_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:id="@+id/widget_song_item_title"/>
+                android:padding="@dimen/padding_container" />
 
             <TextView
+                android:id="@+id/row_song_item_artist"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingHorizontal="10dp"
-                android:textSize="14sp"
-                android:id="@+id/widget_song_item_artist"/>
+                android:paddingHorizontal="@dimen/padding_container"
+                android:textSize="@dimen/text_size_small"
+                android:textColor="?android:attr/textColorSecondary"/>
         </LinearLayout>
     </LinearLayout>
 
     <ImageButton
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
         android:src="@drawable/ic_more_vert_black_24dp"
-        android:layout_weight="0" />
+        android:layout_weight="0"
+        android:tint="?android:attr/textColorSecondary"/>
 </LinearLayout>
