--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="colorDarkSecondary">#23272A</color>
 
     <color name="textPrimary">#FFFFFF</color>
-    <color name="textSecondary">#CCCCCC</color>
+    <color name="textSecondary">#BBBBBB</color>
 
 <!--    default-->
     <color name="colorPrimary">#2C2F33</color>
