--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,7 @@
     <dimen name="appbar_padding_top">8dp</dimen>
     <dimen name="appbar_height">112dp</dimen>
     <dimen name="bottom_appbar_height">70dp</dimen>
+    <dimen name="padding_container">15dp</dimen>
+
+    <dimen name="text_size_small">14sp</dimen>
 </resources>
