--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,34 +25,39 @@
                 android:layout_height="?attr/actionBarSize"
                 android:orientation="horizontal"
                 android:layout_gravity="top">
+                <ImageView
+                    android:layout_width="54dp"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/ic_musicplayerlogo"
+                    android:paddingHorizontal="@dimen/padding_container"/>
+
                 <TextView
                     android:id="@+id/textMusicPlayer"
-                    android:layout_width="fill_parent"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:text="@string/app_name"
-                    android:textSize="25sp"
                     android:visibility="visible"
                     android:layout_weight="1"
                     android:gravity="center_vertical"
-                    android:paddingStart="15dp" />
+                    android:textSize="@dimen/text_size_large"/>
 
-                <ImageButton
-                    android:id="@+id/search_button"
-                    android:layout_width="45dp"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/ic_search_black_24dp"
-                    android:layout_gravity="center"
-                    android:layout_weight="0"
-                    android:tint="?attr/iconTint" />
+<!--                <ImageButton-->
+<!--                    android:id="@+id/search_button"-->
+<!--                    android:layout_width="45dp"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:src="@drawable/ic_search_black_24dp"-->
+<!--                    android:layout_gravity="center"-->
+<!--                    android:layout_weight="0"-->
+<!--                    android:tint="?attr/iconTint" />-->
 
-                <ImageButton
-                    android:id="@+id/button"
-                    android:layout_width="45dp"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/ic_settings_black_24dp"
-                    android:layout_gravity="center"
-                    android:layout_weight="0"
-                    android:tint="?attr/iconTint" />
+<!--                <ImageButton-->
+<!--                    android:id="@+id/button"-->
+<!--                    android:layout_width="45dp"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:src="@drawable/ic_settings_black_24dp"-->
+<!--                    android:layout_gravity="center"-->
+<!--                    android:layout_weight="0"-->
+<!--                    android:tint="?attr/iconTint" />-->
             </LinearLayout>
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
