--- a/app/src/main/res/layout/row_song_item.xml
+++ b/app/src/main/res/layout/row_song_item.xml
@@ -1,51 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/row_song_item_clickable"
-        android:layout_weight="1">
-        <ImageButton
-            android:id="@+id/songPlayButton"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_play_circle_filled_black_24dp"
-            android:layout_weight="0"
-            android:tint="?android:attr/textColorSecondary"
-            />
+    android:padding="@dimen/padding_container">
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingStart="@dimen/padding_container"
-            android:layout_weight="1">
-
-            <TextView
-                android:id="@+id/row_song_item_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/padding_container" />
-
-            <TextView
-                android:id="@+id/row_song_item_artist"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingHorizontal="@dimen/padding_container"
-                android:textSize="@dimen/text_size_small"
-                android:textColor="?android:attr/textColorSecondary"/>
-        </LinearLayout>
-    </LinearLayout>
-
-    <ImageButton
+    <ImageView
+        android:id="@+id/row_song_item_icon"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:src="@drawable/ic_more_vert_black_24dp"
-        android:layout_weight="0"
-        android:tint="?android:attr/textColorSecondary"/>
-</LinearLayout>
+        android:layout_height="0dp"
+        android:foregroundGravity="center"
+        android:src="@drawable/ic_play_circle_filled_black_24dp"
+        android:tint="?android:attr/textColorSecondary"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:paddingEnd="@dimen/padding_container"/>
+
+    <TextView
+        android:id="@+id/row_song_item_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/row_song_item_artist"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintLeft_toRightOf="@id/row_song_item_icon"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/row_song_item_artist"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textColor="?android:attr/textColorSecondary"
+        android:textSize="@dimen/text_size_small"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintLeft_toRightOf="@+id/row_song_item_icon"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/row_song_item_title" />
+</androidx.constraintlayout.widget.ConstraintLayout>
+
