--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,5 @@
 <!--    default-->
     <color name="colorPrimary">#2C2F33</color>
     <color name="colorPrimaryDark">#23272A</color>
-    <color name="colorAccent">#F0F571</color>
+    <color name="colorAccent">#F3F87E</color>
 </resources>
