--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,5 @@
     <dimen name="padding_container">15dp</dimen>
 
     <dimen name="text_size_small">14sp</dimen>
+    <dimen name="text_size_large">20sp</dimen>
 </resources>
