--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="transparent">#00000000</color>
-
     <color name="colorBlack">#000000</color>
-    <color name="colorDarkSecondary">#23272A</color>
+    <color name="colorGrey">#282f33</color>
+    <color name="colorGrey2">#3a4750</color>
 
-    <color name="textPrimary">#FFFFFF</color>
-    <color name="textSecondary">#BBBBBB</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorGreyLight">#BBBBBB</color>
 
 <!--    default-->
-    <color name="colorPrimary">#2C2F33</color>
-    <color name="colorPrimaryDark">#23272A</color>
-    <color name="colorAccent">#F3F87E</color>
+    <color name="colorPrimary">#0f0f0e</color>
+    <color name="colorPrimaryDark">#0f0f0e</color>
+    <color name="colorAccent">#fece2f</color>
 </resources>
