--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,19 +5,18 @@
         <item name="colorPrimary">@color/colorPrimaryDark</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:textColor">@color/textPrimary</item>
-        <item name="android:textColorSecondary">@color/textSecondary</item>
+        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:textColorSecondary">@color/colorGreyLight</item>
 
-        <item name="android:scrollbarThumbVertical">?android:attr/textColorSecondary</item>
+        <item name="android:scrollbarThumbVertical">@drawable/scrollbar_thumb</item>
 
 <!--        color at the back of icon buttons-->
-        <item name="backgroundTint">@color/transparent</item>
-        <item name="android:colorBackground">@color/colorPrimary</item>
+        <item name="backgroundTint">@android:color/transparent</item>
+        <item name="android:colorBackground">?android:attr/colorPrimary</item>
 
 <!--        for app compact icons only will not work on custom icons unless explicitly applied-->
         <item name="iconTint">?android:attr/textColor</item>
         <item name="tabIconTint">?android:attr/textColorSecondary</item>
-        <item name="bottomAppBarStyle">@style/AppTheme.BottomAppBar</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
