--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,109 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:fitsSystemWindows="true"
-    tools:context=".ui.main.MainActivity"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center_horizontal"
-    android:id="@+id/main_layout">
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/main_appbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:elevation="0dp">
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap|enterAlways"
-            app:titleEnabled="false">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:orientation="horizontal"
-                android:layout_gravity="top"
-                android:paddingLeft="20dp">
-                <TextView
-                    android:id="@+id/textMusicPlayer"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:text="@string/app_name"
-                    android:visibility="visible"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical"
-                    android:textSize="@dimen/text_size_large"/>
-            </LinearLayout>
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:id="@+id/main_layout"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:fitsSystemWindows="true"
+	android:gravity="center_horizontal"
+	android:orientation="vertical"
+	tools:context=".ui.main.MainActivity">
 
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/main_tabs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:tabGravity="fill"
-            android:elevation="0dp"
-            app:tabIconTint="?attr/tabIconTint" />
-    </com.google.android.material.appbar.AppBarLayout>
+	<com.google.android.material.appbar.AppBarLayout
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:theme="@style/AppTheme.AppBarOverlay">
 
-<!--    set padding to viewpager progmatically-->
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/main_view_pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+		<androidx.appcompat.widget.Toolbar
+			android:id="@+id/main_toolbar"
+			android:layout_width="match_parent"
+			android:layout_height="?attr/actionBarSize"
+			app:layout_scrollFlags="scroll|enterAlways"
+			app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-        <!--&lt;!&ndash; TODO: Progressbar may not be consistent across devices&ndash;&gt;-->
-        <!--<ProgressBar-->
-        <!--    android:id="@+id/main_bottom_appbar_progressbar"-->
-        <!--    android:layout_width="match_parent"-->
-        <!--    android:layout_height="wrap_content"-->
-        <!--    style="@style/Widget.AppCompat.ProgressBar.Horizontal"-->
-        <!--    android:layout_marginBottom="-6dp"-->
-        <!--    android:layout_marginTop="-4dp"/>-->
+		<com.google.android.material.tabs.TabLayout
+			android:id="@+id/main_tabs"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			app:layout_collapseMode="pin"
+			app:tabGravity="fill"
+			app:tabIconTint="?attr/tabIconTint"
+			app:tabMode="fixed" />
+	</com.google.android.material.appbar.AppBarLayout>
 
-    <LinearLayout
-        android:id="@+id/main_bottom_appbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:gravity="center_horizontal"
-        android:layout_gravity="bottom"
-        android:background="@drawable/bottom_bar_bg">
-        <TextView
-            android:id="@+id/main_bottom_appbar_song_title"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:layout_weight="1"
-            android:paddingStart="5dp"
-            android:onClick="onClick"
+	<!--set padding to viewpager on runtime-->
+	<androidx.viewpager.widget.ViewPager
+		android:id="@+id/main_view_pager"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
 
-            android:ellipsize="marquee"
-            android:singleLine="true"
-            android:scrollHorizontally="true"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:fadingEdge="horizontal" />
+	<!--&lt;!&ndash; TODO: Progressbar may not be consistent across devices&ndash;&gt;-->
+	<!--<ProgressBar-->
+	<!--    android:id="@+id/main_bottom_appbar_progressbar"-->
+	<!--    android:layout_width="match_parent"-->
+	<!--    android:layout_height="wrap_content"-->
+	<!--    style="@style/Widget.AppCompat.ProgressBar.Horizontal"-->
+	<!--    android:layout_marginBottom="-6dp"-->
+	<!--    android:layout_marginTop="-4dp"/>-->
 
-        <ImageButton
-            android:id="@+id/main_bottom_appbar_btn_previous"
-            android:layout_width="50dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_skip_previous_black_24dp"
-            android:tint="?attr/iconTint" />
+	<LinearLayout
+		android:id="@+id/main_bottom_appbar"
+		android:layout_width="match_parent"
+		android:layout_height="?attr/actionBarSize"
+		android:layout_gravity="bottom"
+		android:background="@drawable/bottom_bar_bg"
+		android:gravity="center_horizontal">
 
-        <ImageButton
-            android:layout_width="50dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_play_arrow_black_24dp"
-            android:id="@+id/main_bottom_appbar_btn_play"
-            android:tint="?attr/iconTint" />
+		<TextView
+			android:id="@+id/main_bottom_appbar_song_title"
+			android:layout_width="0dp"
+			android:layout_height="match_parent"
+			android:layout_weight="1"
+			android:ellipsize="marquee"
+			android:fadingEdge="horizontal"
+			android:gravity="center"
 
-        <ImageButton
-            android:id="@+id/main_bottom_appbar_btn_next"
-            android:layout_width="50dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_skip_next_black_24dp"
-            android:tint="?attr/iconTint" />
-    </LinearLayout>
+			android:marqueeRepeatLimit="marquee_forever"
+			android:onClick="onClick"
+			android:paddingStart="5dp"
+			android:scrollHorizontally="true"
+			android:singleLine="true" />
+
+		<ImageButton
+			android:id="@+id/main_bottom_appbar_btn_previous"
+			android:layout_width="50dp"
+			android:layout_height="match_parent"
+			android:src="@drawable/ic_skip_previous_black_24dp"
+			android:tint="?attr/iconTint" />
+
+		<ImageButton
+			android:id="@+id/main_bottom_appbar_btn_play"
+			android:layout_width="50dp"
+			android:layout_height="match_parent"
+			android:src="@drawable/ic_play_arrow_black_24dp"
+			android:tint="?attr/iconTint" />
+
+		<ImageButton
+			android:id="@+id/main_bottom_appbar_btn_next"
+			android:layout_width="50dp"
+			android:layout_height="match_parent"
+			android:src="@drawable/ic_skip_next_black_24dp"
+			android:tint="?attr/iconTint" />
+	</LinearLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
