--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,5 @@
 
     <dimen name="text_size_small">14sp</dimen>
     <dimen name="text_size_large">20sp</dimen>
+    <dimen name="radius_bottom_appbar">25dp</dimen>
 </resources>
