--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,7 +55,8 @@
 		android:layout_height="?attr/actionBarSize"
 		android:layout_gravity="bottom"
 		android:background="@drawable/bottom_bar_bg"
-		android:gravity="center_horizontal">
+		android:gravity="center_horizontal"
+		android:visibility="invisible">
 
 		<TextView
 			android:id="@+id/main_bottom_appbar_song_title"
