--- a/app/src/main/res/layout/row_song_item_first.xml
+++ b/app/src/main/res/layout/row_song_item_first.xml
@@ -6,6 +6,8 @@
 	android:id="@+id/row_song_item_first_header"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
+	android:paddingTop="10dp"
 	android:paddingStart="@dimen/padding_container"
 	android:textColor="?attr/colorAccent"
 	app:layout_constraintTop_toTopOf="parent" />
+<!--todo extract padding as dimension res-->
