--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,7 +6,8 @@
 	tools:context=".ui.main.MainActivity">
 	<item
 		android:id="@+id/action_settings"
+		android:icon="@drawable/ic_settings"
 		android:orderInCategory="100"
-		android:title="@string/action_settings"
+		android:title="@string/settings"
 		app:showAsAction="always" />
 </menu>
