--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorBlack">#000000</color>
-    <color name="colorGrey">#282f33</color>
-    <color name="colorGrey2">#3a4750</color>
-
-    <color name="colorWhite">#FFFFFF</color>
-    <color name="colorGreyLight">#BBBBBB</color>
-
-<!--    default-->
-    <color name="colorPrimary">#0f0f0e</color>
-    <color name="colorPrimaryDark">#0f0f0e</color>
-    <color name="colorAccent">#fece2f</color>
+	<color name="colorWhite">#FFFFFF</color>
+	<color name="colorGreyLight">#BBBBBB</color>
+	<color name="colorBlack">#000000</color>
+	<color name="colorBlack2">#0f0f0e</color>
+	<color name="colorGrey">#282f33</color>
+	<color name="colorGrey2">#3a4750</color>
+	<color name="colorYellow">#fece2f</color>
 </resources>
